# busca

./: .gitattributes  .gitignore  CHANGELOG.md  CONTEXT.md  Cargo.toml  README.md  busca.pyi  busca_py.pyi  cli_release.md  pyproject.toml  python_package.md  testing.md
.github/workflows/: cicd.yml  python.yml  rust.yml
benches/: benchmarks.rs
docs/: demo.tape
docs/adr/: 0001-similarity-ratio-uses-textdiff-ratio.md  0002-library-surface-and-cli-presentation.md  0003-directory-walk-stays-single-threaded.md  0004-scripting-contract.md
documentation/: Demo_Recording.mov
examples/: profile_search.rs
python/: test.py
python/busca/: __init__.py
sample_dir/: sample_python_file.py  sample_python_file_2.py
src/: lib.rs  main.rs
tests/: cli.rs
