[package]
name = "busca"
version = "3.0.0"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "busca"
crate-type = ["cdylib", "lib"]
# path = "src/lib.rs"

[[bin]]
name = "busca"
# path = "src/main.rs"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
console = "0.16.1"
glob = "0.3.3"
indicatif = { version = "0.18.1", features = ["rayon"] }
inquire = "0.9.1"
pyo3 = { version = "0.27.1", features = ["extension-module"] }
rayon = "1.11.0"
similar = { version = "2.7.0", features = ["inline"] }
term_grid = "0.2.0"
walkdir = "2.5.0"

[build-dependencies]
pyo3-build-config = "0.27.1"
