[package]
name = "busca"
version = "3.0.0"
edition = "2021"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "busca"
crate-type = ["cdylib", "lib"]
# path = "src/lib.rs"

[[bin]]
name = "busca"
# path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.3"
glob = "0.3.3"
indicatif = { version = "0.18.4", features = ["rayon"] }
inquire = "0.9.4"
pyo3 = { version = "0.28.3", features = ["extension-module"] }
rayon = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = { version = "3.1.1", features = ["inline"] }
term_grid = "0.2.0"
walkdir = "2.5.0"

[build-dependencies]
pyo3-build-config = "0.28.3"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
